ajuste testes 80%