@@ -116,7 +116,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{jacoco.surefireArgLine}</argLine>
+                    <argLine>@{jacoco.surefireArgLine} -Dnet.bytebuddy.experimental=true</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>**/CucumberRunner.java</include>
